[gd_scene load_steps=2 format=3 uid="uid://menu_multiplayer"]

[ext_resource type="Script" path="res://Scripts/UI/MultiplayerMenu.gd" id="1_script"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/MainMenu"]
layout_mode = 2
text = "GODOT SHOOTER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameInput" type="LineEdit" parent="Panel/MainMenu"]
layout_mode = 2
placeholder_text = "ENTER PLAYER NAME"
alignment = 1
max_length = 16

[node name="HSeparator_Name" type="HSeparator" parent="Panel/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HostButton" type="Button" parent="Panel/MainMenu"]
layout_mode = 2
text = "HOST GAME"

[node name="HSeparator2" type="HSeparator" parent="Panel/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="JoinInput" type="LineEdit" parent="Panel/MainMenu"]
layout_mode = 2
placeholder_text = "Enter Code OR IP"
alignment = 1

[node name="JoinButton" type="Button" parent="Panel/MainMenu"]
layout_mode = 2
text = "JOIN GAME"

[node name="HSeparator3" type="HSeparator" parent="Panel/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LocalContainer" type="HBoxContainer" parent="Panel/MainMenu"]
layout_mode = 2
alignment = 1

[node name="HostLocalButton" type="Button" parent="Panel/MainMenu/LocalContainer"]
layout_mode = 2
text = "HOST LOCAL"

[node name="JoinLocalButton" type="Button" parent="Panel/MainMenu/LocalContainer"]
layout_mode = 2
text = "JOIN LOCAL"

[node name="HSeparator4" type="HSeparator" parent="Panel/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="QuitGameButton" type="Button" parent="Panel/MainMenu"]
layout_mode = 2
text = "QUIT TO DESKTOP"

[node name="StatusLabel" type="Label" parent="Panel/MainMenu"]
layout_mode = 2
text = "Status: Idle"
horizontal_alignment = 1

[node name="LobbyUI" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/LobbyUI"]
layout_mode = 2
text = "LOBBY"
horizontal_alignment = 1

[node name="CodeButton" type="Button" parent="Panel/LobbyUI"]
layout_mode = 2
text = "CODE: ???"

[node name="Label2" type="Label" parent="Panel/LobbyUI"]
layout_mode = 2
text = "Players Connected:"
horizontal_alignment = 1

[node name="TeamColumns" type="HBoxContainer" parent="Panel/LobbyUI"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="BlueColumn" type="VBoxContainer" parent="Panel/LobbyUI/TeamColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinBlueButton" type="Button" parent="Panel/LobbyUI/TeamColumns/BlueColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.5, 1, 1)
text = "JOIN BLUE (0/5)"

[node name="BlueList" type="ItemList" parent="Panel/LobbyUI/TeamColumns/BlueColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="RedColumn" type="VBoxContainer" parent="Panel/LobbyUI/TeamColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinRedButton" type="Button" parent="Panel/LobbyUI/TeamColumns/RedColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
text = "JOIN RED (0/5)"

[node name="RedList" type="ItemList" parent="Panel/LobbyUI/TeamColumns/RedColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Panel/LobbyUI"]
layout_mode = 2
text = "START GAME"

[node name="LeaveButton" type="Button" parent="Panel/LobbyUI"]
layout_mode = 2
text = "LEAVE LOBBY"

[connection signal="pressed" from="Panel/MainMenu/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Panel/MainMenu/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Panel/MainMenu/LocalContainer/HostLocalButton" to="." method="_on_host_local_pressed"]
[connection signal="pressed" from="Panel/MainMenu/LocalContainer/JoinLocalButton" to="." method="_on_join_local_pressed"]
[connection signal="pressed" from="Panel/LobbyUI/CodeButton" to="." method="_on_code_copy_pressed"]
[connection signal="pressed" from="Panel/LobbyUI/TeamColumns/BlueColumn/JoinBlueButton" to="." method="_on_join_blue_pressed"]
[connection signal="pressed" from="Panel/LobbyUI/TeamColumns/RedColumn/JoinRedButton" to="." method="_on_join_red_pressed"]
[connection signal="pressed" from="Panel/LobbyUI/StartButton" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Panel/LobbyUI/LeaveButton" to="." method="_on_leave_pressed"]
